--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
       sites: [
         { name: "Ibrahim Ansari", year: 2030, website: "https://ibrahimansari.ca" },
         { name: "Divyam Banga", year: 2030, website: "https://divyambanga.github.io/" },
-        {name: "Vibhor Sharma", year: 2030, website: "https://vibhorsharmaportfolio.study/"},
-        {name: "Shane Barakat", year: 2028, website: "https://shanebarakat.com/"}
+        {name: "Vibhor Sharma", year: 2030, website: "https://vibhorsharmaportfolio.study/"}
 
       ]
     };
